<resources>
    <string name="app_name">IziSurvey</string>

    <string name="title_activity_login">Login</string>
    <string name="title_activity_home">IziSurvey</string>
    <string name="title_register_user">Registro de usuario</string>
    <string name="title_organization_detail">Dettales de organización</string>
    <string name="title_survey_questions">Encuesta</string>

    <!-- LOGIN -->
    <string name="prompt_email">Correo electrónico</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_sign_in_short">Ingresar</string>
    <string name="error_invalid_email">Correo electrónico inválido</string>
    <string name="error_wrong_password">Contraseña incorrecta</string>
    <string name="error_invalid_password">Contraseña demasiado corta</string>
    <string name="error_email_in_use">Correo electrónico actualmente en uso</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="permission_rationale">"Permiso de contactos es necesario para la autocompletación del email"
    </string>
    <string name="auth_failed">Autenticación fallida</string>
    <string name="error_user_disable">Usuario actualmente deshabilitado</string>
    <string name="error_user_doesnt_exist">Correo electrónico no registrado</string>
    <string name="register_user">Registrar.</string>
    <string name="forgot_password">Olvidaste tu contraseña?</string>

    <!-- REGISTER USER -->
    <string name="prompt_username">Nombre de usuario</string>
    <string name="prompt_name">Nombre</string>
    <string name="prompt_password_register">Contraseña</string>
    <string name="prompt_last_name">Apellido</string>
    <string name="prompt_repeat_password">Confirme contraseña</string>
    <string name="action_sign_up">Registrar</string>
    <string name="error_match_password">Contraseñas no coinciden</string>

    <!-- ITEMS NAVDRAWER -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="surveys">Encuestas</string>
    <string name="organizations">Organizaciones</string>
    <string name="preferences">Preferencias</string>
    <string name="about">Acerca de</string>
    <string name="logout">Cerrar sesión</string>
    <string name="misc">Misc</string>
</resources>
